...

    static func spellings(from translations: [Translation]) -> [[String]] {
        (0..<66).map { index in translations.compactMap { $0.books?[index] }.flatMap { [$0.name, $0.abbreviation] } }
    }

    public static let all: [Book] = [
        Book(1, "Genesis", "Gen", "Бытие", "Быт", ["Бт"]),
        Book(2, "Exodus", "Exod", "Исход", "Исх", ["Ex"]),
        Book(3, "Leviticus", "Lev", "Левит", "Лев", []),
        Book(4, "Numbers", "Num", "Числа", "Чис", []),
        Book(5, "Deuteronomy", "Deut", "Второзаконие", "Втор", []),
        Book(6, "Joshua", "Josh", "Иисус Навин", "Нав", ["Иисус Навина"]),
        Book(7, "Judges", "Judg", "Судьи", "Суд", ["Судей"]),
...
